infrastructure/ks8/services/order-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-svc
  template:
    metadata:
      labels:
        app: order-svc
    spec:
      containers:
        - image: lfelipelias/order-service:1.0.0-SNAPSHOT
          name: order-service
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: order-svc-service
spec:
  ports:
    - protocol: "TCP"
      port: 8080
      targetPort: 8080
  selector:
    app: order-svc
  type: NodePort
