infrastructure/ks8/services/payment-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-svc
  template:
    metadata:
      labels:
        app: payment-svc
    spec:
      containers:
        - image: lfelipelias/payment-service:1.0.0-SNAPSHOT
          name: payment-service
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: payment-svc-service
spec:
  ports:
    - protocol: "TCP"
      port: 8080
      targetPort: 8080
  selector:
    app: payment-svc
  type: ClusterIP
