infrastructure/ks8/services/product-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-svc
  template:
    metadata:
      labels:
        app: product-svc
    spec:
      containers:
        - image: lfelipelias/product-service:1.0.0-SNAPSHOT
          name: product-service
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: product-svc-service
spec:
  ports:
    - protocol: "TCP"
      port: 8080
      targetPort: 8080
  selector:
    app: product-svc
  type: NodePort
