infrastructure/ks8/services/shopping-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shopping-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
    - host: shopping.com
      http:
        paths:
          - path: /order
            pathType: Prefix
            backend:
              service:
                name: order-svc-service
                port:
                  number: 8080
          - path: /payment
            pathType: Prefix
            backend:
              service:
                name: payment-svc-service
                port:
                  number: 8080
          - path: /product
            pathType: Prefix
            backend:
              service:
                name: product-svc-service
                port:
                  number: 8080
